--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-icons": "^5.5.0",
     "swiper": "^11.2.6",
     "tailwind-merge": "^3.1.0",
-    "tw-animate-css": "^1.2.5"
+    "tw-animate-css": "^1.2.5",
+    "universal-cookie": "^8.0.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
