--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-fast-marquee": "^1.6.5",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
     "shadcn": "^2.5.0",
     "swiper": "^11.2.6",
     "tailwind-merge": "^3.1.0",
