--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.7",
     "@radix-ui/react-hover-card": "^1.1.7",
+    "@reduxjs/toolkit": "^2.8.1",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.4",
     "axios": "^1.8.4",
@@ -25,6 +26,7 @@
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
+    "react-redux": "^9.2.0",
     "shadcn": "^2.5.0",
     "swiper": "^11.2.6",
     "tailwind-merge": "^3.1.0",
