--- a/package.json
+++ b/package.json
@@ -14,10 +14,18 @@
     "@reduxjs/toolkit": "^2.8.1",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.4",
+    "@tiptap/extension-color": "^2.12.0",
+    "@tiptap/extension-image": "^2.12.0",
+    "@tiptap/extension-text-align": "^2.12.0",
+    "@tiptap/extension-text-style": "^2.12.0",
+    "@tiptap/extension-underline": "^2.12.0",
+    "@tiptap/react": "^2.12.0",
+    "@tiptap/starter-kit": "^2.12.0",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.6.2",
+    "html-react-parser": "^5.2.5",
     "lucide-react": "^0.486.0",
     "next": "15.2.4",
     "react": "^19.0.0",
@@ -27,6 +35,8 @@
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "react-redux": "^9.2.0",
+    "rehype-raw": "^7.0.0",
+    "remark-gfm": "^4.0.1",
     "shadcn": "^2.5.0",
     "swiper": "^11.2.6",
     "tailwind-merge": "^3.1.0",
